--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -23,4 +26,44 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul{
+  list-style-type: none;
+  display:flex;
+  gap:8px;
+  padding:0;
+}
+
+a{
+  text-decoration: none;
+  color:rgb(31, 31, 31);
+}
+
+.header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin:0px 16px;
+}
+
+.content{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:16px;
+}
+
+.buttons button{
+  padding:8px;
+}
+
+.footer{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:0px 16px;
+  background-color: #eee;
 }
