--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,24 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  justify-content: center;
+}
+
+.header,.footer{
+  display: flex;
+  align-items: center;
+}
+
+.middle{
+  display: flex;
+  flex:1;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 200px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.card-box{
+  display:flex;
+  flex-wrap: wrap;
+  gap:32px;
+  justify-content: center;
+}
+
+.card{
+  max-width: 200px;
+  padding:50px;
+  margin:16px;
+}
+
+ul{
+  list-style-type: none;
+  padding:0;
+  display: flex;
+  flex-direction: column;
+  gap:16px;
+}
+
+a{
+  text-decoration: none;
+  color:white;
+  font-weight: bold;
 }
 
 .card {
